# The-Forge

./: CMakeLists.txt  README.md
Common_3/Application/: Config.h
Common_3/Application/Fonts/: FontSystem.cpp
Common_3/Application/UI/: UI.cpp
Common_3/Game/Scripting/: LuaSystem.cpp
Common_3/Utilities/Log/: Log.c
Configs/: CustomConfig.h  ForgePropertiesConfig.h  PlatformConfig.h
